Fix reccomendation text size by gaps-size

--- a/assets/css/recommendations.css
+++ b/assets/css/recommendations.css
@@ -1,4 +1,5 @@
 .recommendations {
+  --gap-size: 0.4rem;
   --recommendation-image-size: 100px;
 
   background-color: var(--color-green-yellow);
